Tue May 30 10:30:59 1995  Gray Watson  (gray@burger.letters.com)

	* Fixed problem with conf.h references before included.

	* Fixed problems with exit() calls in configure.  Thanks Rik.

Mon May 15 20:13:10 1995  Gray Watson  (gray@burger.letters.com)

	* Added error-dump token for dumping-core and continuing on errors.

	* Added Web pointers to online documentation.

	* Added abort() auto-configuration for KILL_PROCESS.

	* Minor fixes.  Added an arg to dmalloc_die to be silent.

Fri May 12 16:33:44 1995  Gray Watson  (gray@burger.letters.com)

	* Released version 3.0.6-beta.

	* Fixed problem with NEVER_REUSE and realloc same block-size.

	* Fixed up logging of time.  Lots of ifdefs.

	* Added a pointer overhead structure.

Fri May  5 11:39:39 1995  Gray Watson  (gray@burger.letters.com)

	* Renamed a number of chunk fields to remove the use of count.

	* Logged starting/ending time in logfile.

	* Added thread-id tracking with conf.h option.

	* Added pointer-count tracking with conf.h option.

	* Added interation-count tracking with conf.h option.

	* Added global/relative time tracking with conf.h option.

Fri Mar 31 16:51:52 1995  Gray Watson  (gray@burger.letters.com)

	* Better tag output from dmalloc -t.

	* New version of argv files.

	* Fixed problem with dmalloc -c and start-count.

	* Added some messages about upcoming errors in dmalloc_t.

Thu Mar 23 10:34:33 1995  Gray Watson  (gray@burger.letters.com)

	* Improved the manual a bit.  Phased in some alpha changes.

	* Added some Next notes to the contrib directory.  Need more.

Fri Mar 10 13:29:49 1995  Gray Watson  (gray@burger.letters.com)

	* Added allow-zero token for not minding malloc(0) and free(0L).

	* Made all chunk.c global counters longs.

Fri Mar  3 12:37:17 1995  Gray Watson  (gray@burger.letters.com)

	* Integrated into new CVS hierarchy.  New copyrights.

Mon Jan  2 18:51:19 1995  Gray Watson  (gray@fridge.antaire.com)

        * Released version 3.0.5.
